force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Sales_Tax__c</fullName>
    <description>The amount of Tax to be paid/reclaimed</description>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>