force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Sales_Tax_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Sales_Tax_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rule used to calculate Sales Tax</description>
    <label>Sales Tax Rule</label>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Individual Booking Details (Sales Tax Rule)</relationshipLabel>
    <relationshipName>Individual_Booking_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>