force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Selected__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>