force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Sell_Price_for_GM_Rollup__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Sell_Price_for_GM_Rollup__c</fullName>
    <description>The sell price that is rolled up to Group Member: Recommended Sell Price - returns gross sell unless &quot;Add agent commission to sell price&quot; is turned on, in which case it returns the net sell.</description>
    <label>Sell Price for GM Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>