force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Show_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Show_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Option</label>
    <type>Checkbox</type>
</CustomField>