force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Special_Offer__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Special_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only required if Item Category is Special Offer.</inlineHelpText>
    <label>Special Offer</label>
    <referenceTo>sugati__Special_Offer__c</referenceTo>
    <relationshipLabel>Individual Booking Details</relationshipLabel>
    <relationshipName>Individual_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>