force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Canc_Amt_Book_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Canc_Amt_Book_Currency__c</fullName>
    <inlineHelpText>Supplier Cancellation Amount in booking currency</inlineHelpText>
    <label>Supplier Cancellation Amt Book Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>