force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Cancellation_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Cancellation_Percent__c</fullName>
    <label>Supplier Cancellation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>