force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Cancellation_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Cancellation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rule that will be applied to calculate the amount due to the supplier on cancellation</description>
    <label>Supplier Cancellation Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Rule__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier Cancellation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Individual Booking Details (Supplier Cancellation Rule)</relationshipLabel>
    <relationshipName>Individual_Booking_Details3</relationshipName>
    <type>Lookup</type>
</CustomField>