force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Comm_VAT_Booking_aftr_cnx__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Comm_VAT_Booking_aftr_cnx__c</fullName>
    <label>Supplier Comm VAT (Booking) after canx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>