force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Commission_Percent__c</fullName>
    <description>Shows your Commission as a % and updates Commission Value</description>
    <label>Supplier Commission Percent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>