force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Commission_Term__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Commission_Term__c</fullName>
    <description>Is the commission paid immediately or is it deffered?</description>
    <inlineHelpText>Is the commission paid immediately or is it deffered?</inlineHelpText>
    <label>Supplier Commission Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>