force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Supplier Cost Record</description>
    <label>Supplier Cost</label>
    <referenceTo>sugati__Supplier_Cost__c</referenceTo>
    <relationshipLabel>Individual Booking Details</relationshipLabel>
    <relationshipName>Individual_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>