force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_Currency__c</fullName>
    <description>Supplier Currency - ie the currency in which the payment to the supplier will be made in.</description>
    <label>Supplier Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>