force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Supplier_ID__c</fullName>
    <formula>sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier ID</label>
    <type>Text</type>
</CustomField>