force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Tour_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Tour_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tour Booking?</label>
    <type>Checkbox</type>
</CustomField>