force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
                <default>true</default>
                <label>Shared</label>
            </value>
            <value>
                <fullName>Per Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>