force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_VAT_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_VAT_Percent__c</fullName>
    <label>VAT Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>