force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_VAT_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_VAT_Type__c</fullName>
    <label>VAT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Agent Commission</fullName>
            </value>
            <value>
                <fullName>Manual Overwrite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>