force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_VAT_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_VAT_Value__c</fullName>
    <formula>IF(TEXT(sugati__S_IBD_VAT_Type__c)==&apos;Agent Commission&apos;, IF(NOT(ISBLANK(sugati__S_IBD_Agent_Commission_Override_Amount__c)), sugati__S_IBD_Agent_Commission_Override_Amount__c, sugati__S_IBD_Agent_Commission_Amount__c) * sugati__S_IBD_VAT_Percent__c,IF(TEXT(sugati__S_IBD_VAT_Type__c)==&apos;Manual Overwrite&apos;,sugati__S_IBD_VAT_Value_Manual__c, sugati__S_IBD_Supplier_Commission_Amount__c* sugati__S_IBD_VAT_Percent__c))</formula>
    <label>VAT Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>