force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_VAT_Value_Manual__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_VAT_Value_Manual__c</fullName>
    <label>VAT Value (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>