force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Zero_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Zero_Sell_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zero Sell Price</label>
    <type>Checkbox</type>
</CustomField>